frontend/test/should_fail/exectype_AssignAttributeToVar4.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia ;> f:foo=x.f && i:int=x.i && st:string=x.st && s:set<string> =x.s); // x.s is set<foo>
	}
}